// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders username and body 1`] = `
<div
  className="root"
>
  <withPropsOnChange(Typography)
    className="author"
    gutterBottom={true}
  >
    Marvin
  </withPropsOnChange(Typography)>
  <withPropsOnChange(Timestamp)
    date="1995-12-17T06:24:00.000Z"
  />
  <withPropsOnChange(Typography)>
    Woof
  </withPropsOnChange(Typography)>
</div>
`;

exports[`renders with gutterBottom 1`] = `
<div
  className="root gutterBottom"
>
  <withPropsOnChange(Typography)
    className="author"
    gutterBottom={true}
  >
    Marvin
  </withPropsOnChange(Typography)>
  <withPropsOnChange(Timestamp)
    date="1995-12-17T06:24:00.000Z"
  />
  <withPropsOnChange(Typography)>
    Woof
  </withPropsOnChange(Typography)>
</div>
`;
